# campd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
docs/: index.html
docs_src/: conf.py  index.rst
docs_src/api/: architectures.rst  data.rst  experiments.rst  models.rst  registry.rst  training.rst  utils.rst
docs_src/guide/: core_concepts.md  extending.md  launching.md  troubleshooting.md  yaml_config.md
examples/franka/: launch_train.py  requirements.txt
examples/franka/assets/: franka.yml  franka_spheres.yml
examples/franka/assets/urdf/: franka_panda.srdf
examples/franka/configs/mpinets/: inference.yaml  train.yaml  train_further.yaml
examples/franka/configs/spheres/: inference.yaml  train.yaml
examples/franka/src/: browser_key_server.py  inference_validator.py  robot_model.py  training_summary.py
src/campd/: all_imports.py  runner.py
src/campd/architectures/: registry.py
src/campd/architectures/context/: encoder.py
src/campd/architectures/diffusion/: __init__.py  base.py  temporal_unet.py
src/campd/architectures/layers/: __init__.py  attention.py  layers.py  utils.py
src/campd/data/: __init__.py  context.py  embedded_context.py  trajectory_dataset.py  trajectory_sample.py
src/campd/data/normalization/: __init__.py  base.py  normalization.py  registry.py
src/campd/experiments/: __init__.py  base.py  inference.py  inference_server.py  registry.py  train.py  validators.py
src/campd/models/: helpers.py
src/campd/models/diffusion/: model.py
src/campd/training/: __init__.py  base.py  callbacks.py  losses.py  registry.py  summary.py
src/campd/training/objectives/: __init__.py  base.py  diffusion.py
src/campd/utils/: config.py  file.py  random.py  registry.py  stats.py  torch.py
tests/: test_callbacks.py  test_config_imports.py  test_context.py  test_context_encoder.py  test_diffusion_model.py  test_diffusion_objective.py  test_embedded_context.py  test_experiment_base.py  test_inference.py  test_inference_refactor.py  test_losses.py  test_normalization.py  test_optional_trajectory.py  test_pydantic_utils.py  test_registry.py  test_reverse_diffusion_network.py  test_runner.py  test_summary.py  test_temporal_unet.py  test_tensor_args.py  test_train.py  test_train_config.py  test_trainer_base.py  test_trajectory_dataset_base.py  test_trajectory_sample.py
